--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {},
     "autoload": {
 	    "psr-4": {
-		    "Unity\\": "src"
+		    "Unity\\Support\\": "src"
 	    }
     },
     "require-dev": {
