--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "unity/support",
     "description": "A collection of support classes used in Unity framework",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -17,6 +17,7 @@
 	    }
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2"
+        "phpunit/phpunit": "^6.2",
+        "mikey179/vfsStream": "^1.6"
     }
 }
