--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
     "autoload": {
 	    "psr-4": {
 		    "Unity\\Support\\": "src"
-	    }
+        },
+        "files": [
+            "src/Helpers.php"
+        ]
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
